--- a/src/main/java/uc15/pi_pdvcongelados/gui/TelaFerramAdminAdministrador.form
+++ b/src/main/java/uc15/pi_pdvcongelados/gui/TelaFerramAdminAdministrador.form
@@ -153,6 +153,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Adicionar produtos para venda"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAdicionarProdutosActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnEfetuarVenda">
               <Properties>
@@ -161,6 +164,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Efetuar venda"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEfetuarVendaActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnListaVendas">
               <Properties>
@@ -169,6 +175,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Lista de vendas"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnListaVendasActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
